# gpui-storybook

./: .gitignore  .typos.toml  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  README.md  codecov.yaml  justfile  release-plz.toml
.agents/skills/use-gpui-storybook/: SKILL.md
.agents/skills/use-gpui-storybook/agents/: openai.yaml
.github/actions/install-linux-deps/: action.yml
.github/workflows/: ci.yml  release-plz.yml
crates/gpui-storybook/: Cargo.toml  README.md
crates/gpui-storybook-components/: Cargo.toml  README.md
crates/gpui-storybook-components/src/: lib.rs  sidebar.rs
crates/gpui-storybook-core/: Cargo.toml  README.md  build.rs  i18n.toml
crates/gpui-storybook-core/assets/i18n/en/: gpui-storybook-core.ftl
crates/gpui-storybook-core/assets/themes/: ayu.json  everforest.json  fahrenheit.json  flexoki.json  macos-classic.json  mellifluous.json  solarized.json  tokyonight.json
crates/gpui-storybook-core/docs/: ARCHITECTURE.md
crates/gpui-storybook-core/src/: actions.rs  app_menus.rs  assets.rs  automation.rs  capture_output.rs  capture_region.rs  dock_gallery.rs  dock_layout_store.rs  dock_sidebar_index.rs  gallery.rs  i18n.rs  language.rs  lib.rs  locale.rs  messages.rs  preferences.rs  registry.rs  storybook_window_ui.rs  window_options.rs  window_view.rs
crates/gpui-storybook-core/src/story/: components.rs  init.rs  mod.rs  state.rs  themes.rs  window.rs
crates/gpui-storybook-core/src/title_bar/: font_size_selector.rs  locale_selector.rs  mod.rs
crates/gpui-storybook-macros/: Cargo.toml  README.md
crates/gpui-storybook-macros/docs/: ARCHITECTURE.md
crates/gpui-storybook-macros/src/: lib.rs
crates/gpui-storybook-macros/src/snapshots/: gpui_storybook_macros__tests__component_story_derive_generates_wrapper_story_and_registry_entry.snap  gpui_storybook_macros__tests__component_story_derive_with_metadata_generates_wrapper_story_and_registry_entry.snap  gpui_storybook_macros__tests__component_story_derive_with_string_expressions_generates_wrapper_story_and_registry_entry.snap  gpui_storybook_macros__tests__component_story_duplicate_metadata_reports_compile_error.snap  gpui_storybook_macros__tests__story_attribute_generates_registry_entry.snap  gpui_storybook_macros__tests__story_attribute_on_non_struct_reports_compile_error.snap  gpui_storybook_macros__tests__story_attribute_with_section_generates_registry_entry.snap  gpui_storybook_macros__tests__story_init_attribute_generates_registry_entry.snap  gpui_storybook_macros__tests__story_init_attribute_on_non_function_reports_compile_error.snap  gpui_storybook_macros__tests__substory_derive_generates_stable_keys_and_titles.snap
crates/gpui-storybook-mcp/: Cargo.toml  README.md
crates/gpui-storybook-mcp/src/: lib.rs
crates/gpui-storybook-preferences/: Cargo.toml  README.md
crates/gpui-storybook-preferences/src/: detection.rs  lib.rs  repository.rs  resolution.rs  tests.rs  value.rs
crates/gpui-storybook-toml/: Cargo.toml  README.md
crates/gpui-storybook-toml/docs/: ARCHITECTURE.md
crates/gpui-storybook-toml/src/: lib.rs
crates/gpui-storybook/docs/: ARCHITECTURE.md
crates/gpui-storybook/src/: lib.rs  preferences.rs
crates/gpui-storybook/tests/: duplicate_story_key.rs
crates/gpui-storybook/tests/fixtures/duplicate-story-key/: Cargo.toml
crates/gpui-storybook/tests/fixtures/duplicate-story-key/src/: main.rs
crates/i18n-manager/: Cargo.toml
crates/i18n-manager/src/: lib.rs
example/: Cargo.toml  README.md  storybook.toml
example/i18n/en/: gpui-storybook-example.ftl
example/i18n/fr/: gpui-storybook-example.ftl
example/i18n/zh-CN/: gpui-storybook-example.ftl
example/src/: lib.rs  main.rs  section.rs
example/src/stories/: button_story.rs  hello.rs  hello2.rs  mod.rs  table_story.rs  welcome_story.rs
examples/component/: Cargo.toml  README.md  storybook.toml
examples/component/i18n/en/: gpui-storybook-example-component.ftl
examples/component/i18n/fr/: gpui-storybook-example-component.ftl
examples/component/i18n/zh/: gpui-storybook-example-component.ftl
examples/component/src/: i18n.rs  lib.rs  main.rs
examples/component/src/components/: field_notes.rs  mod.rs  signal_board.rs  welcome_card.rs
examples/i18n/: Cargo.toml
examples/i18n/i18n/en/: gpui-storybook-example-i18n.ftl
examples/i18n/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
examples/simple/src/stories/: hello.rs  hello2.rs
examples/story/: Cargo.toml  README.md  storybook.toml
examples/story/i18n/en/: gpui-storybook-example-story.ftl
examples/story/i18n/zh/: gpui-storybook-example-story.ftl
examples/story/src/: i18n.rs  lib.rs  main.rs  section.rs
examples/story/src/stories/: button_story.rs  custom_section_story.rs  grouped_story.rs  hello.rs  mod.rs  table_story.rs
skills/use-gpui-storybook/: SKILL.md
skills/use-gpui-storybook/agents/: openai.yaml
