[workspace]
default-members = [ "examples/story" ]
members = [
  "crates/gpui-storybook",
  "crates/gpui-storybook-components",
  "crates/gpui-storybook-core",
  "crates/gpui-storybook-macros",
  "crates/gpui-storybook-mcp",
  "crates/gpui-storybook-toml",
  "examples/story",
  "examples/component",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/stayhydated/gpui-storybook"
rust-version = "1.96"
version = "0.5.0"

[workspace.dependencies]
anyhow = "1.0"
component-shape-mcp = { git = "https://github.com/stayhydated/component-shape" }
darling = "0.23"
derive_more = "2.1"
es-fluent = "0.18"
es-fluent-build = "0.18"
es-fluent-lang = "0.18"
es-fluent-manager-embedded = "0.18"
frame-capture = { git = "https://github.com/stayhydated/frame-capture" }
frame-capture-routes = { git = "https://github.com/stayhydated/frame-capture" }
gpui = { branch = "linux-headless-renderer", git = "https://github.com/stayhydated/zed", version = "0.2.2" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
gpui-es-fluent = { git = "https://github.com/stayhydated/gpui-es-fluent" }
gpui-storybook = { path = "crates/gpui-storybook", version = "0.5.0" }
gpui-storybook-components = { path = "crates/gpui-storybook-components", version = "0.5.0" }
gpui-storybook-core = { path = "crates/gpui-storybook-core", version = "0.5.0" }
gpui-storybook-macros = { path = "crates/gpui-storybook-macros", version = "0.5.0" }
gpui-storybook-mcp = { path = "crates/gpui-storybook-mcp", version = "0.5.0" }
gpui-storybook-toml = { path = "crates/gpui-storybook-toml", version = "0.5.0" }
gpui_platform = { branch = "linux-headless-renderer", features = [
  "font-kit",
  "x11",
  "wayland",
  "runtime_shaders",
], git = "https://github.com/stayhydated/zed" }
heck = "0.5"
image = { default-features = false, features = [ "png" ], version = "0.25" }
insta = "1.48"
inventory = "0.3"
itertools = "0.14"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
reqwest_client = { branch = "linux-headless-renderer", git = "https://github.com/stayhydated/zed" }
rmcp = "2.2.0"
rust-embed = "8.12"
serde = "1.0"
serde_json = "1.0"
strum = "0.28"
syn = "2.0"
thiserror = "2.0"
tokio = "1.52"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"
unic-langid = "0.9"
unicode-segmentation = "1.13"

[patch."https://github.com/zed-industries/zed"]
gpui = { branch = "linux-headless-renderer", git = "https://github.com/stayhydated/zed", version = "=0.2.2" }
gpui_macros = { branch = "linux-headless-renderer", git = "https://github.com/stayhydated/zed", version = "0.1.0" }
gpui_platform = { branch = "linux-headless-renderer", git = "https://github.com/stayhydated/zed" }
reqwest_client = { branch = "linux-headless-renderer", git = "https://github.com/stayhydated/zed" }

[workspace.lints.rust]
future_incompatible = "deny"
nonstandard_style = "deny"
unexpected_cfgs = { check-cfg = [ "cfg(coverage)" ], level = "deny" }
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "deny"
derive_partial_eq_without_eq = "warn"
err_expect = "warn"
incompatible_msrv = "deny"
iter_on_single_items = "warn"
needless_bool = "warn"
redundant_clone = "warn"
todo = "deny"
type_complexity = "allow"
uninlined_format_args = "allow"
unused_trait_names = "warn"
useless_conversion = "warn"

[profile.dev]
codegen-units = 16
debug = "limited"
opt-level = 1
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
