[package]
name = "gpui-storybook-example"
version.workspace = true
edition.workspace = true
license = "Unlicense"
publish = false

[dependencies]
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-storybook = { workspace = true }
es-fluent = { workspace = true }
es-fluent-lang = { workspace = true }
es-fluent-manager-embedded = { workspace = true }
strum = { workspace = true }

[build-dependencies]
es-fluent-build = { workspace = true }
log = { workspace = true }

[lints]
workspace = true
