[package]
name = "gpui-storybook-example"
version.workspace = true
edition.workspace = true
license = "Unlicense"
publish = false

[dependencies]
es-fluent = { features = [ "derive" ], workspace = true }
es-fluent-lang = { workspace = true }
es-fluent-manager-embedded = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-storybook = { workspace = true }
rust-embed = { workspace = true }
strum = { workspace = true }
reqwest_client = { workspace = true }
serde = { workspace = true }
tracing-subscriber = { features = [ "env-filter" ], workspace = true }
gpui_platform = { workspace = true }

[build-dependencies]
es-fluent = { features = [ "build" ], workspace = true }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = [ "rust-embed" ]
