[package]
name = "gpui-storybook-components"
description = """
Components for gpui-storybook
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
gpui = { workspace = true }
gpui-component = { workspace = true }

[lints]
workspace = true
