[package]
name = "gpui-storybook-core"
description = """
Core crate for gpui-storybook
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"
include = [ "src/**/*", "assets/**/*", "i18n.toml" ]

[features]
dock = [  ]

[dependencies]
anyhow = { workspace = true }
derive_more = { features = [ "as_ref", "display", "from" ], workspace = true }
es-fluent = { workspace = true }
gpui = { workspace = true }
gpui-component = { features = [ "inspector" ], workspace = true }
gpui-component-assets = { workspace = true }
gpui-es-fluent = { workspace = true }
gpui-storybook-components = { workspace = true }
inventory = { workspace = true }
rust-embed = { features = [ "interpolate-folder-path" ], workspace = true }
serde = { features = [ "derive" ], workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
unic-langid = { features = [ "serde" ], workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18" }

[build-dependencies]
es-fluent-build = { workspace = true }

[lints]
workspace = true
