[package]
name = "gpui-storybook-core"
description = """
Core crate for gpui-storybook
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"
include = [ "src/**/*", "assets/**/*", "i18n.toml" ]

[package.metadata.cargo-machete]
ignored = [ "gpui_platform" ]

[features]
capture = [ "dep:gpui_platform", "dep:image", "gpui/test-support", "gpui_platform/test-support" ]
dock = [  ]

[dependencies]
anyhow = { workspace = true }
derive_more = { features = [ "as_ref", "display", "from" ], workspace = true }
es-fluent = { workspace = true }
es-fluent-manager-core = { workspace = true }
es-fluent-manager-embedded = { workspace = true }
gpui = { workspace = true }
gpui-component = { features = [ "inspector" ], workspace = true }
gpui-component-assets = { workspace = true }
gpui-es-fluent = { workspace = true }
gpui-storybook-components = { workspace = true }
gpui-storybook-preferences = { workspace = true }
gpui_platform = { optional = true, workspace = true }
gpui_tokio = { workspace = true }
image = { optional = true, workspace = true }
inventory = { workspace = true }
rust-embed = { features = [ "interpolate-folder-path" ], workspace = true }
serde = { features = [ "derive" ], workspace = true }
serde_json = { workspace = true }
tokio = { features = [ "sync" ], workspace = true }
tracing = { workspace = true }
unic-langid = { features = [ "serde" ], workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18" }

[build-dependencies]
es-fluent-build = { workspace = true }

[dev-dependencies]
gpui = { features = [ "test-support" ], workspace = true }
strum.workspace = true
tokio = { features = [ "rt" ], workspace = true }

[lints]
workspace = true
