[package]
name = "gpui-storybook-macros"
description = """
Macro crate for gpui-storybook
"""
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
gpui-storybook-core = { workspace = true }
heck = { workspace = true }
inventory = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { features = [ "full" ], workspace = true }

[dev-dependencies]
insta = { workspace = true }
prettyplease = { workspace = true }

[lints]
workspace = true
