[package]
name = "gpui-storybook-toml"
description = """
TOML configuration loader for gpui-storybook
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
serde = { features = [ "derive" ], workspace = true }
toml = { workspace = true }

[lints]
workspace = true
