[package]
name = "gpui-storybook"
description = """
The gpui-storybook crate
"""
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = [ "macros" ]
macros = [ "dep:gpui-storybook-macros" ]

[dependencies]
gpui = { workspace = true }
gpui-storybook-core = { workspace = true }
gpui-storybook-macros = { optional = true, workspace = true }
inventory = { workspace = true }

[lints]
workspace = true
