[package]
name = "gpui-storybook"
description = """
The gpui-storybook crate
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = [ "macros" ]
macros = [ "dep:gpui-storybook-macros" ]

[dependencies]
gpui = { workspace = true }
gpui-storybook-core = { workspace = true }
gpui-storybook-macros = { optional = true, workspace = true }
inventory = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
