[package]
name = "gpui-storybook"
description = """
The gpui-storybook crate
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = [ "macros" ]
dock = [ "gpui-storybook-core/dock" ]
macros = [ "dep:gpui-storybook-macros" ]
mcp = [ "dep:gpui-storybook-mcp", "gpui-storybook-core/capture" ]

[dependencies]
gpui = { workspace = true }
gpui-es-fluent = { workspace = true }
gpui-storybook-core = { workspace = true }
gpui-storybook-macros = { optional = true, workspace = true }
gpui-storybook-mcp = { optional = true, workspace = true }
gpui-storybook-preferences = { workspace = true }
gpui-storybook-toml = { workspace = true }
gpui_tokio = { workspace = true }
inventory = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
unic-langid = { workspace = true }

[dev-dependencies]
es-fluent = { workspace = true }
gpui = { features = [ "test-support" ], workspace = true }
strum = { workspace = true }

[lints]
workspace = true
