[package]
name = "gpui-storybook-example-component"
version.workspace = true
edition.workspace = true
license = "Unlicense"
publish = false

[features]
default = [  ]
dock = [ "gpui-storybook/dock" ]

[dependencies]
es-fluent = { features = [ "derive" ], workspace = true }
es-fluent-lang = { workspace = true }
es-fluent-manager-embedded = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-storybook = { workspace = true }
gpui_platform = { workspace = true }
reqwest_client = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
tracing-subscriber = { features = [ "env-filter" ], workspace = true }

[build-dependencies]
es-fluent = { features = [ "build" ], workspace = true }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = [ "rust-embed" ]
