[package]
name = "gpui-storybook-example-simple"
version.workspace = true
edition.workspace = true
license = "Unlicense"
publish = false

[dependencies]
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-storybook = { workspace = true }
rust-embed = { workspace = true }
strum = { workspace = true }

[lints]
workspace = true
