[workspace]

[package]
name = "gpui-storybook-duplicate-fixture"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
gpui = { path = "../../../../../../zed/crates/gpui" }
gpui-storybook = { path = "../../.." }

[patch."https://github.com/zed-industries/zed"]
gpui = { path = "../../../../../../zed/crates/gpui" }
gpui_platform = { path = "../../../../../../zed/crates/gpui_platform" }
reqwest_client = { path = "../../../../../../zed/crates/reqwest_client" }
