[workspace]

[package]
name = "gpui-storybook-duplicate-fixture"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
gpui = { branch = "linux-headless-renderer", git = "https://github.com/stayhydated/zed", version = "0.2.2" }
gpui-storybook = { path = "../../.." }

[patch."https://github.com/zed-industries/zed"]
gpui = { branch = "linux-headless-renderer", git = "https://github.com/stayhydated/zed", version = "=0.2.2" }
gpui_macros = { branch = "linux-headless-renderer", git = "https://github.com/stayhydated/zed", version = "0.1.0" }
